# SF3KtoObj

./: CMakeLists.txt  GMakefile  MakeCommon  Makefile  NMakefile  README.md  colours.c  colours.h  flags.h  materials.c  materials.h  misc.h  names.c  names.h  parser.c  parser.h  sf3k.mtl  sf3ktomtl.c  sf3ktoobj.c  sfformats.h  version.h
